--- a/doc-site-frontend/src/main/resources/src/components/Navigation/Toolbar/Toolbar.css
+++ b/doc-site-frontend/src/main/resources/src/components/Navigation/Toolbar/Toolbar.css
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #815f59;
+    background-color: #d7e9f5;
     display: flex;
     justify-content: space-between;
     align-items: center;
