--- a/doc-site-frontend/src/main/resources/src/components/user/login/Login.css
+++ b/doc-site-frontend/src/main/resources/src/components/user/login/Login.css
@@ -1,8 +1,7 @@
 .login-container {
-    max-width: 420px;
-    margin: 0 auto;
-    margin-top: 40px;
-}
+     max-width: 420px;
+     margin: 40px auto 0;
+ }
 
 .login-form-button {
     width: 100%;
